--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         command: >
             sh -c "python manage.py makemigrations && 
                    python manage.py migrate &&
+                   python manage.py collectstatic --noinput &&
                    python manage.py runserver 0.0.0.0:8000"
         ports:
             - "8000:8000"
